@@ -42,6 +42,11 @@ http.ServerResponse.prototype.header = function res_header(name, value) {
 http.ServerResponse.prototype.send = null;
 http.ServerResponse.prototype.get = null;
 http.ServerResponse.prototype.json = null;
+http.ServerResponse.prototype._body = null;
+
+// accelerate access
+http.IncomingMessage.prototype = http.IncomingMessage.prototype;
+http.ServerResponse.prototype = http.ServerResponse.prototype;
 
 var aflow = require('aflow');
 var QRoute = require('./qroute');
