@@ -2,6 +2,7 @@
 - restify compat: provide res._body
 - restify compat: suppress errors from `after`
 - run tests with qnit
+- upgrade aflow to 0.10.1 for speedup
 
 0.6.2
 - fix potential null deref on unmapped routes
